--- a/package.json
+++ b/package.json
@@ -18,15 +18,7 @@
   ],
   "dependencies": {
     "meow": "^3.1.0",
-    "express": "3.1.0",
-    "mongodb": "*",
-    "mongoose": "*",
-    "connect-mongo": "*",
-    "passport": "*",
-    "passport-local": "*",
-    "passport-local-mongoose": "*",
-    "connect-flash" : "~0.1.1", 
-    "bcrypt-nodejs" : "latest" 
+    "express": "3.1.0"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
