--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "browserify": "^9.0.3",
+    "connect": "^3.4.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-nodeunit": "^0.4.1",
@@ -29,6 +30,7 @@
     "grunt-mocha-cli": "^1.12.0",
     "jshint-stylish": "^1.0.1",
     "load-grunt-tasks": "^3.1.0",
+    "serve-static": "^1.10.0",
     "time-grunt": "^1.1.0"
   },
   "scripts": {
@@ -37,5 +39,6 @@
   },
   "bin": {
     "cars": "cli.js"
-  }
+  },
+  "main" : "index.js"
 }
